cambios - nabvar y footer

--- a/pages/I+D+i.html
+++ b/pages/I+D+i.html
@@ -108,9 +108,9 @@
                   <img class="img-fluid rounded-circle p-2" src="../assets/img/team/team-1.jpg" alt="" width="150"/>
                 </div>
                 <div class="ml-3">
-                  <div class="h2">Ph.D. Freddy Escobar</div>
+                  <div class="h2">Freddy Escobar</div>
                   <div>
-                    Energía
+                    Ingeniero en "---" (Energía)
                   </div>
                 </div>
               </div>
@@ -128,13 +128,13 @@
                 <ul class="list-unstyled">
                   <li>
                     <a href="#" class="d-flex bg-dark p-2 card-link align-items-center mt-2 text-white">
-                    <span class="pr-4">M.Sc. Ivan Joya</span>
+                    <span class="pr-4">Ingeniero - Ivan Joya </span>
                     <span>Energías Alternativas</span>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="d-flex bg-dark p-2 card-link align-items-center mt-2 text-white">
-                      <span class="pr-4">M.Sc Jairo Sepulveda</span>
+                      <span class="pr-4">Ingeniero - Jairo Sepulveda</span>
                       <span>Hidrocarburos</span>
                     </a>
                   </li>
@@ -153,9 +153,9 @@
                   <img class="img-fluid rounded-circle p-2" src="../assets/img/team/team-3.jpg" alt="" width="150"/>
                 </div>
                 <div class="ml-3">
-                  <div class="h2">Ph.D. Armando Torrente</div>
+                  <div class="h2"> Armando Torrente</div>
                   <div>
-                    Agricultura
+                    Ingeniero en "---" (Agricultura)
                   </div>
                 </div>
               </div>
@@ -173,13 +173,13 @@
                 <ul class="list-unstyled">
                   <li>
                     <a href="#" class="d-flex bg-dark p-2 card-link align-items-center mt-2 text-white">
-                    <span class="pr-4">M.Sc. Amalia Molina</span>
+                    <span class="pr-4">Ingeniera - Amalia Molina</span>
                     <span>Ciencia de los alimentos</span>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="d-flex bg-dark p-2 card-link align-items-center mt-2 text-white">
-                      <span class="pr-4">M.Sc Wilmer V.</span>
+                      <span class="pr-4">Ingeniero - Wilmer V.</span>
                       <span>Agroecología</span>
                     </a>
                   </li>
@@ -198,9 +198,9 @@
                   <img class="img-fluid rounded-circle p-2" src="../assets/img/team/team-2.jpg" alt="" width="150"/>
                 </div>
                 <div class="ml-3">
-                  <div class="h2">Ph.D. Alfredo Olaya</div>
+                  <div class="h2">Alfredo Olaya</div>
                   <div>
-                    Ambiente
+                    Ingeniero en "---" (Ambiente)
                   </div>
                 </div>
               </div>
@@ -218,13 +218,13 @@
                 <ul class="list-unstyled">
                   <li>
                     <a href="#" class="d-flex bg-dark p-2 card-link align-items-center mt-2 text-white">
-                    <span class="pr-4">M.Sc. Jhon Chavarro</span>
+                    <span class="pr-4">Ingeniero - Jhon Chavarro</span>
                     <span>Hidrosistemas</span>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="d-flex bg-dark p-2 card-link align-items-center mt-2 text-white">
-                      <span class="pr-4">M.Sc Luz Orozco</span>
+                      <span class="pr-4">Ingeniero -  Luz Orozco</span>
                       <span>GIS</span>
                     </a>
                   </li>
@@ -240,12 +240,12 @@
               <div class="position-relative p-3 pb-4 cardBg-3 rounded">
               <div class="wrapper d-flex align-items-center">
                 <div>
-                  <img class="img-fluid rounded-circle p-2" src="../assets/img/team/team-6.jpg" alt="" width="150"/>
+                  <img class="img-fluid rounded-circle p-2" src="../assets/img/wilfredo-marimon.png" alt="" width="130"/>
                 </div>
                 <div class="ml-3">
-                  <div class="h2">Ph.D. Wilfredo Marimon</div>
+                  <div class="h2">Wilfredo Marimon</div>
                   <div>
-                    Computacional
+                    Ingeniero Quimico (Computacional)
                   </div>
                 </div>
               </div>
@@ -263,13 +263,13 @@
                 <ul class="list-unstyled">
                   <li>
                     <a href="#" class="d-flex bg-dark p-2 card-link align-items-center mt-2 text-white">
-                    <span class="pr-4">M.Sc. Matilde M.</span>
+                    <span class="pr-4">Ingeniera - Matilde M.</span>
                     <span>Dpto. Desarrollo de Software</span>
                     </a>
                   </li>
                   <li>
                     <a href="#" class="d-flex bg-dark p-2 card-link align-items-center mt-2 text-white">
-                      <span class="pr-4">M.Sc Jorge Chavarro</span>
+                      <span class="pr-4">Ingeniero - Jorge Chavarro</span>
                       <span>Ciencia de Datos</span>
                     </a>
                   </li>
