--- a/pages/noticias-eventos.html
+++ b/pages/noticias-eventos.html
@@ -76,7 +76,7 @@
                     </li>
                   </ul>
                 </li>
-                <li><a href="#"><span>Personal</span></a></li>
+                <li><a href="../pages/personal.html"><span>Personal</span></a></li>
                 <li><a href="../pages/servicios.html"><span>Servicios</span></a></li>
                 <li><a href="#"><span>Publicaciones</span></a></li>
               </ul>
@@ -655,11 +655,11 @@
         <div class="box">
           <h2>Enlaces de Ínteres</h2>
           <ul class="footer-links">
-            <li><a href="./nosotros.html">Sobre nosotros</a></li>
-            <li><a href="./calificacionESAL.html">Proceso de calificación ESAL</a></li>
-            <li><a href="./jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-            <li><a href="./investigadores.html">Investigadores</li>
-            <li><a href="./pasantes.html">Pasantes</a></li>
+            <li><a href="../pages/nosotros.html">Sobre nosotros</a></li>
+            <li><a href="../pages/calificacionESAL.html">Proceso de calificación ESAL</a></li>
+            <li><a href="../pages/personal.html">Personal</a></li>
+            <li><a href="../pages/servicios.html">Servicios</a></li>
+            <li><a href="#">Publicaciones</a></li>
           </ul>
         </div>
         <div class="box">
