--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -74,7 +74,7 @@
                   </li>
                 </ul>
               </li>
-              <li><a href="#"><span>Personal</span></a></li>
+              <li><a href="../pages/personal.html"><span>Personal</span></a></li>
               <li><a href="../pages/servicios.html"><span>Servicios</span></a></li>
               <li><a href="#"><span>Publicaciones</span></a></li>
             </ul>
@@ -743,44 +743,45 @@
   <hr>
 
   <footer class="pie-pagina">
-        <div class="grupo-1">
-            <div class="box">
-                <figure>
-                    <a href="../index.html">
-                        <img src="../assets/svg/Cenigaa.svg" alt="Logo Cenigaa">
-                    </a>
-                </figure>
-            </div>
-            <div class="box">
-              <h2>Enlaces de Ínteres</h2>
-              <ul class="footer-links">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/calificacionESAL.html">Proceso de calificación ESAL</a></li>
-                <li><a href="../pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-                <li><a href="../pages/investigadores.html">Investigadores</li>
-                <li><a href="../pages/pasantes.html">Pasantes</a></li>
-              </ul>
-            </div>
-            <div class="box">
-              <h2>Contáctenos</h2>
-              <ul class="footer-links">
-                <li><p>Calle 8 No. 32-49 Universidad CORHUILA Prado Alto, Edificio de Laboratorios 4° piso., Neiva, Colombia.</p></li>
-                <li><p>info@cenigaa.org </p></li>
-                <li><p>3183835434</p></li>
-              </ul>
-            </div>
-            <div class="box">
-                <h2>SIGUENOS</h2>
-                <div class="red-social">
-                  <a href="https://web.facebook.com/cenigaa"><i class="fa-brands fa-facebook-f"></i></a>
-                  <a href="https://www.instagram.com/cenigaaoficial/"><i class="fa-brands fa-instagram"></i></a>
-                  <a href="https://www.linkedin.com/company/centrodeinvestigacion-cenigaa/"><i class="fa-brands fa-linkedin"></i></a>
-                </div>
+    <div class="grupo-1">
+        <div class="box">
+            <figure>
+                <a href="../index.html">
+                    <img src="../assets/svg/Cenigaa.svg" alt="Logo Cenigaa">
+                </a>
+            </figure>
+        </div>
+        <div class="box">
+          <h2>Enlaces de Ínteres</h2>
+          <ul class="footer-links">
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../pages/nosotros.html">Sobre nosotros</a></li>
+            <li><a href="../pages/calificacionESAL.html">Proceso de calificación ESAL</a></li>
+            <li><a href="../pages/personal.html">Personal</a></li>
+            <li><a href="../pages/servicios.html">Servicios</a></li>
+            <li><a href="#">Publicaciones</a></li>
+          </ul>
+        </div>
+        <div class="box">
+          <h2>Contáctenos</h2>
+          <ul class="footer-links">
+            <li><p>Calle 8 No. 32-49 Universidad CORHUILA Prado Alto, Edificio de Laboratorios 4° piso, Neiva, Colombia.</p></li>
+            <li><p>info@cenigaa.org </p></li>
+            <li><p>3183835434</p></li>
+          </ul>
+        </div>
+        <div class="box">
+            <h2>SIGUENOS</h2>
+            <div class="red-social">
+              <a href="https://web.facebook.com/cenigaa"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="https://www.instagram.com/cenigaaoficial/"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/centrodeinvestigacion-cenigaa/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
-        <div class="grupo-2">
-            <small><b>Copyright</b> &copy; 2023 <b>CENIGAA</b> - Todos los Derechos Reservados.</small>
-        </div>
+    </div>
+    <div class="grupo-2">
+        <small><b>Copyright</b> &copy; 2023 <b>CENIGAA</b> - Todos los Derechos Reservados.</small>
+    </div>
   </footer>
 
    <!-- Large modal Whatsapp -->
