--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   </li>
                 </ul>
               </li>
-              <li><a href="./pages/investigadores.html"><span>Personal</span></a></li>
+              <li><a href="./pages/personal.html"><span>Personal</span></a></li>
               <li><a href="./pages/servicios.html"><span>Servicios</span></a></li>
               <li><a href="#"><span>Publicaciones</span></a></li>
             </ul>
@@ -286,9 +286,9 @@
           <ul class="footer-links">
             <li><a href="./pages/nosotros.html">Sobre nosotros</a></li>
             <li><a href="./pages/calificacionESAL.html">Proceso de calificación ESAL</a></li>
-            <li><a href="./pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-            <li><a href="./pages/investigadores.html">Investigadores</li>
-            <li><a href="./pages/pasantes.html">Pasantes</a></li>
+            <li><a href="./pages/personal.html">Personal</a></li>
+            <li><a href="./pages/servicios.html">Servicios</a></li>
+            <li><a href="#">Publicaciones</a></li>
           </ul>
         </div>
         <div class="box">
