--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -74,7 +74,7 @@
                   </li>
                 </ul>
               </li>
-              <li><a href="#"><span>Personal</span></a></li>
+              <li><a href="../pages/personal.html "><span>Personal</span></a></li>
               <li><a href="../pages/servicios.html"><span>Servicios</span></a></li>
               <li><a href="#"><span>Publicaciones</span></a></li>
             </ul>
@@ -349,9 +349,9 @@
               <ul class="footer-links">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../pages/calificacionESAL.html">Proceso de calificación ESAL</a></li>
-                <li><a href="../pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-                <li><a href="../pages/investigadores.html">Investigadores</li>
-                <li><a href="../pages/pasantes.html">Pasantes</a></li>
+                <li><a href="../pages/personal.html">Personal</a></li>
+                <li><a href="../pages/servicios.html">Servicios</li>
+                <li><a href="#">Publicaciones</a></li>
               </ul>
             </div>
             <div class="box">
