--- a/pages/personal.html
+++ b/pages/personal.html
@@ -102,7 +102,7 @@
                   <path d="M5 4a.5.5 0 0 0-.496.438l-.5 4A.5.5 0 0 0 4.5 9h3v2.016c-.863.055-1.5.251-1.5.484 0 .276.895.5 2 .5s2-.224 2-.5c0-.233-.637-.429-1.5-.484V9h3a.5.5 0 0 0 .496-.562l-.5-4A.5.5 0 0 0 11 4H5zm2 3.78V5.22c0-.096.106-.156.19-.106l2.13 1.279a.125.125 0 0 1 0 .214l-2.13 1.28A.125.125 0 0 1 7 7.778z"/>
                   <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
                 </svg></div>
-                <h4 class="title"><a href="#">Investigadores</a></h4>
+                <h4 class="title"><a href="#">Nuestro Personal</a></h4>
                 <p class="description">La Fundación Centro de Investigación en
                   Ciencias y Recursos GeoAgroAmbientales
                   “CENIGAA”, integra los componentes del
@@ -361,6 +361,7 @@
               <h2>Enlaces de Ínteres</h2>
               <ul class="footer-links">
                 <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../pages/nosotros.html">Sobre nosotros</a></li>
                 <li><a href="../pages/calificacionESAL.html">Proceso de calificación ESAL</a></li>
                 <li><a href="../pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
                 <li><a href="../pages/investigadores.html">Investigadores</li>
