--- a/pages/Proyectos/complementarios.html
+++ b/pages/Proyectos/complementarios.html
@@ -15,7 +15,7 @@
     <!-- Bootstrap -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"/> -->
     <link rel="stylesheet" href="../../assets/css/noticias-eventos.css">
-    <title>Proyectos complementarios</title>
+    <title>Actividades complementarios</title>
 </head>
 <body>
 
