--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -46,8 +46,8 @@
                   <li class="has-children">
                     <a href="#">I+D+i</a>
                     <ul class="dropdown">
-                      <li><a href="#">Actividad Nuclear</a></li>
-                      <li><a href="#">Actividades Complementarias</a></li>
+                      <li><a href="../pages/Proyectos/nucleares.html">Actividad Nuclear</a></li>
+                      <li><a href="../pages/Proyectos/complementarios.html">Actividades Complementarias</a></li>
                     </ul>
                   </li>
                   <li class="has-children">
